kubernetes/apps/networking/ingress-nginx/app/external-services/homeassistant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: networking
spec:
  type: ExternalName
  externalName: "yellow.${SECRET_DOMAIN}"
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
# ---
# apiVersion: v1
# kind: Endpoints
# metadata:
#   name: homeassistant
#   namespace: networking
# subsets:
#   - addresses:
#       - ip: 10.3.1.1
#     ports:
#       - name: http
#         port: 8123
#         protocol: TCP
# ---
# # EndpointSlices causes crash (panic) with headless service
# # use once resolved: https://github.com/kubernetes/ingress-nginx/issues/9606
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: homeassistant
#   namespace: networking
#   labels:
#     # 'kubernetes.io/service-name' Must be present for EndpointSlice and equal to Service name for automatic mapping
#     # If in place, you can change the name of EndpointSlice to something else.
#     # The official convention is using Service name as the prefix.
#     kubernetes.io/service-name: homeassistant
# addressType: IPv4
# ports:
#   - port: 8123
# endpoints:
#   - addresses:
#     - "10.3.1.1" # IP address of your external service that you would like to proxy requests to
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: networking
spec:
  ingressClassName: nginx
  rules:
    - host: &host "homeassistant.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
      # secretName: "${SECRET_DOMAIN/./-}-tls"
